fix horizontal overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    margin:0;
+    margin: 0;
     width: 100%;
     width: 100vw;
     color: white;
@@ -176,7 +176,7 @@ h2 {
         position: absolute;
         top: 16px;
         left: 16px;
-        width: 100%;
+        width: 50%;
     }
 
     #social-media-container div {
